--- a/calidad.html
+++ b/calidad.html
@@ -33,7 +33,7 @@
 
     <main>
         <section class="carousel-section">
-            <div class="section-header">
+            <div class="section-header" style="margin-bottom: 50px;">
                 <span class="hero-badge" style="margin-bottom: 10px;">Valores de Nuestra Tierra</span>
                 <h1 style="font-family: 'Playfair Display', serif; font-size: 3rem;">Nuestro Compromiso</h1>
                 <p style="max-width: 750px; margin: 0 auto;">En Mercado Raíz, la calidad no es solo el sabor, sino el impacto positivo en el Cantón Cayambe.</p>
@@ -41,37 +41,39 @@
 
             <div class="container" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; padding: 0 20px;">
                 
-                <div class="category-card" style="padding: 40px; height: auto; cursor: default;">
+                <div class="category-card" style="padding: 40px; height: auto; cursor: default; transition: transform 0.3s ease;">
                     <div style="font-size: 3rem; margin-bottom: 20px; display: block;">🤝</div>
                     <h3 style="font-family: 'Playfair Display', serif; color: var(--pueblo-sage); margin-bottom: 15px;">Comercio Justo</h3>
-                    <p style="font-size: 0.95rem; color: #666;">
-                        Eliminamos la intermediación excesiva para asegurar que los pequeños productores reciban un pago digno, fortaleciendo la economía local.
+                    <p style="font-size: 0.95rem; color: #666; line-height: 1.6;">
+                        Eliminamos la intermediación excesiva para asegurar que los pequeños productores reciban un pago digno, fortaleciendo la economía local de cada parcela.
                     </p>
                 </div>
 
-                <div class="category-card" style="padding: 40px; height: auto; cursor: default;">
+                <div class="category-card" style="padding: 40px; height: auto; cursor: default; transition: transform 0.3s ease;">
                     <div style="font-size: 3rem; margin-bottom: 20px; display: block;">🌱</div>
                     <h3 style="font-family: 'Playfair Display', serif; color: var(--pueblo-sage); margin-bottom: 15px;">Sostenibilidad</h3>
-                    <p style="font-size: 0.95rem; color: #666;">
-                        Promovemos prácticas agrícolas que respetan la Pacha Mama, garantizando productos libres de químicos agresivos y siempre frescos.
+                    <p style="font-size: 0.95rem; color: #666; line-height: 1.6;">
+                        Promovemos prácticas agrícolas que respetan la Pacha Mama, garantizando productos frescos de temporada, cultivados con respeto al ciclo natural.
                     </p>
                 </div>
 
-                <div class="category-card" style="padding: 40px; height: auto; cursor: default;">
+                <div class="category-card" style="padding: 40px; height: auto; cursor: default; transition: transform 0.3s ease;">
                     <div style="font-size: 3rem; margin-bottom: 20px; display: block;">🔍</div>
                     <h3 style="font-family: 'Playfair Display', serif; color: var(--pueblo-sage); margin-bottom: 15px;">Transparencia</h3>
-                    <p style="font-size: 0.95rem; color: #666;">
-                        Conoce el origen exacto de lo que pones en tu mesa. Trabajamos con comunidades identificadas como Ayora, Olmedo y Juan Montalvo.
+                    <p style="font-size: 0.95rem; color: #666; line-height: 1.6;">
+                        Conoce el origen exacto de lo que pones en tu mesa. Cada producto está vinculado directamente a un productor verificado de Cayambe.
                     </p>
                 </div>
             </div>
 
-            <div class="text-center" style="margin-top: 60px; background: var(--pueblo-sand); padding: 50px 20px; border-radius: 20px; margin-left: 20px; margin-right: 20px;">
-                <h3 style="font-family: 'Playfair Display', serif; font-size: 2rem; margin-bottom: 15px;">¿Por qué elegir Mercado Raíz?</h3>
-                <p style="max-width: 700px; margin: 0 auto 30px; color: var(--pueblo-charcoal);">
-                    Cada compra apoya directamente la soberanía alimentaria y reduce la brecha económica del sector rural en Cayambe.
-                </p>
-                <a href="productos.html" class="btn-login-header" style="padding: 15px 40px; font-size: 1rem;">Ver Productos Locales</a>
+            <div class="container" style="margin-top: 60px;">
+                <div style="background: var(--pueblo-sand); padding: 50px 20px; border-radius: 20px; text-align: center;">
+                    <h3 style="font-family: 'Playfair Display', serif; font-size: 2rem; margin-bottom: 15px;">¿Por qué elegir Mercado Raíz?</h3>
+                    <p style="max-width: 700px; margin: 0 auto 30px; color: var(--pueblo-charcoal); line-height: 1.6;">
+                        Al comprar aquí, tu dinero va directo al agricultor. El sistema de pago por QR asegura que la transacción sea directa y transparente para el productor local.
+                    </p>
+                    <a href="productos.html" class="btn-login-header" style="padding: 15px 40px; font-size: 1rem; text-decoration: none; display: inline-block;">Ver Productos Locales</a>
+                </div>
             </div>
         </section>
     </main>
@@ -82,13 +84,11 @@
                 <h3>Mercado Raíz</h3>
                 <p>Conectando el corazón de Cayambe con tu hogar.</p>
             </div>
-            
             <div class="footer-socials-center">
                 <a href="#"><i class="fab fa-facebook"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
                 <a href="#"><i class="fab fa-whatsapp"></i></a>
             </div>
-
             <div class="footer-copy-center">
                 <p>&copy; 2026 Mercado Raíz - Identidad y Sabor de Nuestra Tierra.</p>
             </div>
@@ -98,16 +98,17 @@
     <div id="cart-overlay" class="cart-overlay"></div>
     <div id="side-cart" class="side-cart">
         <div class="cart-header">
-            <h3>Tu Cosecha (Carrito)</h3>
+            <h3>Tu Cosecha</h3>
             <button id="close-cart" class="close-btn">&times;</button>
         </div>
-        <div id="cart-items-container" class="cart-body"></div>
+        <div id="cart-items-container" class="cart-body">
+            </div>
         <div class="cart-footer">
             <div class="cart-total">
                 <span>Total:</span>
                 <span id="cart-total-amount">$0.00</span>
             </div>
-            <button class="btn-checkout">Finalizar Compra</button>
+            <a href="carrito.html" class="btn-checkout" style="text-align: center; text-decoration: none; display: block;">Revisar Pedido</a>
         </div>
     </div>
 
@@ -118,6 +119,7 @@
 
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
 
     <script>
       const firebaseConfig = {
@@ -127,14 +129,11 @@
         projectId: "mercado-raiz",
         storageBucket: "mercado-raiz.firebasestorage.app",
         messagingSenderId: "886584284411",
-        appId: "1:886584284411:web:f006908eeb8d9da224cc5e",
-        measurementId: "G-5EW3Y8Z2XE"
+        appId: "1:886584284411:web:NDI3ZqYWUtYWNhNS00NzEwLWIxMDktWjNmViYzk4Njly"
       };
 
-      // Inicializar
-      firebase.initializeApp(firebaseConfig);
-      const db = firebase.database(); 
-      // Ahora la variable 'db' ya existe y main.js la puede usar
+      if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
+      window.db = firebase.database();
     </script>
 
     <script src="js/main.js"></script>
