commit: visualizacion de productores en la pagina proveedores

--- a/admin.html
+++ b/admin.html
@@ -163,7 +163,19 @@
                         <select name="prod-unidad" id="prod-unidad">
                             <option value="Libra">Libra</option>
                             <option value="Kilo">Kilo</option>
+                            <option value="Litro">Litro</option>
                             <option value="Unidad">Unidad/Atado</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label>Categoría</label>
+                        <select name="prod-categoria" id="prod-categoria" required>
+                            <option value="">-- Seleccione --</option>
+                            <option value="Verduras">Verduras</option>
+                            <option value="Frutas">Frutas</option>
+                            <option value="Procesados">Procesados (Mermeladas/Vinos)</option>
+                            <option value="Lácteos">Lácteos</option>
+                            <option value="Granos">Granos y Cereales</option>
                         </select>
                     </div>
                     <div class="full-width">
