--- a/productos.html
+++ b/productos.html
@@ -8,22 +8,25 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
-        /* Asegura que las imágenes no se deformen en el catálogo */
-        .product-image img {
+        .product-image-container {
             width: 100%;
-            height: 200px; /* Altura fija para uniformidad */
-            object-fit: cover !important;
+            height: 220px;
+            overflow: hidden;
+            border-radius: 12px 12px 0 0;
         }
-        .product-card {
-            display: flex;
-            flex-direction: column;
+        .product-image-container img {
+            width: 100%;
             height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
         }
-        /* Estilo para el filtro activo */
+        .product-card:hover img {
+            transform: scale(1.05);
+        }
         .category-card.active {
-            background-color: var(--pueblo-terracotta) !important;
+            background-color: #c6714f !important;
             color: white !important;
-            border-color: var(--pueblo-terracotta) !important;
+            border-color: #c6714f !important;
         }
     </style>
 </head>
@@ -69,7 +72,8 @@
             </div>
 
             <div id="productsGrid" class="container" style="display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 30px; padding: 0 20px;">
-                </div>
+                <p class="text-center">Cargando productos de la tierra...</p>
+            </div>
         </section>
     </main>
 
@@ -90,30 +94,6 @@
         </div>
     </footer>
 
-    <div id="cart-overlay" class="cart-overlay"></div>
-    <div id="side-cart" class="side-cart">
-        <div class="cart-header">
-            <h3>Tu Cosecha (Carrito)</h3>
-            <button id="close-cart" class="close-btn">&times;</button>
-        </div>
-        <div id="cart-items-container" class="cart-body">
-            <p class="empty-msg">Tu carrito está vacío.</p>
-        </div>
-        <div class="cart-footer">
-            <div class="cart-total">
-                <span>Total:</span>
-                <span id="cart-total-amount">$0.00</span>
-            </div>
-            <button class="btn-checkout">Finalizar Compra</button>
-            <a href="carrito.html" class="btn-view-cart">Ver Carrito Completo</a>
-        </div>
-    </div>
-
-    <div id="floating-cart-btn" class="floating-cart-trigger">
-        <i class="fas fa-shopping-basket"></i>
-        <span id="cart-count-badge" class="cart-badge">0</span>
-    </div>
-
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-database-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.17.1/firebase-auth-compat.js"></script>
@@ -129,9 +109,7 @@
         appId: "1:886584284411:web:NDI3ZqYWUtYWNhNS00NzEwLWIxMDktWjNmViYzk4Njly"
       };
 
-      if (!firebase.apps.length) {
-          firebase.initializeApp(firebaseConfig);
-      }
+      if (!firebase.apps.length) { firebase.initializeApp(firebaseConfig); }
       window.db = firebase.database(); 
       window.auth = firebase.auth();
     </script>
@@ -140,14 +118,72 @@
     <script src="js/main.js"></script>
     
     <script>
-        // Lógica para resaltar el filtro de categoría seleccionado
-        const urlParams = new URLSearchParams(window.location.search);
-        const cat = urlParams.get('cat') || 'todos';
-        document.querySelectorAll('.filter-chips a').forEach(link => {
-            if(link.href.includes(`cat=${cat}`)) {
-                link.classList.add('active');
-            }
+        document.addEventListener("DOMContentLoaded", () => {
+            const grid = document.getElementById("productsGrid");
+            const urlParams = new URLSearchParams(window.location.search);
+            const catSeleccionada = urlParams.get('cat') || 'todos';
+
+            // Resaltar botón de categoría
+            document.querySelectorAll('.filter-chips a').forEach(link => {
+                if(link.href.includes(`cat=${catSeleccionada}`)) link.classList.add('active');
+            });
+
+            // Leer productos de Firebase
+            db.ref('productos').on('value', (snapshot) => {
+                grid.innerHTML = "";
+                const data = snapshot.val();
+
+                if (data) {
+                    Object.keys(data).forEach(id => {
+                        const p = data[id];
+                        
+                        // Filtrar por categoría si no es "todos"
+                        if (catSeleccionada !== 'todos' && p.categoria !== catSeleccionada) return;
+
+                        const card = `
+                            <div class="product-card" style="background:white; border-radius:15px; box-shadow:0 4px 15px rgba(0,0,0,0.05); overflow:hidden; display:flex; flex-direction:column;">
+                                <div class="product-image-container">
+                                    <img src="${p.imagenUrl || 'img/default-product.jpg'}" alt="${p.nombre}">
+                                </div>
+                                <div style="padding:20px; flex-grow:1; display:flex; flex-direction:column;">
+                                    <span style="font-size:0.75rem; color:#8da281; font-weight:bold; text-transform:uppercase;">${p.categoria}</span>
+                                    <h3 style="font-family:'Playfair Display', serif; margin:5px 0 10px 0; font-size:1.2rem;">${p.nombre}</h3>
+                                    <p style="color:#666; font-size:0.85rem; margin-bottom:15px;">${p.descripcion || ''}</p>
+                                    <div style="margin-top:auto; display:flex; justify-content:space-between; align-items:center;">
+                                        <span style="font-weight:bold; color:#c6714f; font-size:1.2rem;">$${parseFloat(p.precio).toFixed(2)}</span>
+                                        <button onclick="agregarAlCarrito('${id}', '${p.nombre}', ${p.precio}, '${p.imagenUrl}')" 
+                                                style="background:#8da281; color:white; border:none; padding:8px 15px; border-radius:8px; cursor:pointer;">
+                                            <i class="fas fa-plus"></i> Añadir
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        `;
+                        grid.innerHTML += card;
+                    });
+                } else {
+                    grid.innerHTML = "<p class='text-center' style='grid-column:1/-1;'>No hay productos disponibles en esta categoría.</p>";
+                }
+            });
         });
+
+        // Función puente para el carrito (conecta con main.js)
+        function agregarAlCarrito(id, nombre, precio, imagen) {
+            if (typeof window.addToCart === 'function') {
+                window.addToCart(id, nombre, precio, imagen);
+                // Notificación visual simple
+                const btn = event.currentTarget;
+                const originalText = btn.innerHTML;
+                btn.innerHTML = "<i class='fas fa-check'></i> Listo";
+                btn.style.background = "#c6714f";
+                setTimeout(() => {
+                    btn.innerHTML = originalText;
+                    btn.style.background = "#8da281";
+                }, 1000);
+            } else {
+                console.error("La función addToCart no está definida en main.js");
+            }
+        }
     </script>
 </body>
 </html>
