--- a/carrito.html
+++ b/carrito.html
@@ -16,7 +16,7 @@
             <nav class="main-nav">
                 <a href="index.html">Inicio</a>
                 <a href="productos.html">Productos</a>
-                <a href="proveedores.html">Proveedores</a>
+                <a href="proveedor.html">Proveedores</a>
                 <a href="carrito.html" class="active">Carrito</a>
                 <div class="auth-buttons" id="authContainer">
                     </div>
