commit: confirmacion de solicitudes y sugerencias

--- a/admin.html
+++ b/admin.html
@@ -31,6 +31,9 @@
             <a href="javascript:void(0)" onclick="cargarSeccion('pedidos')" id="link-pedidos" class="nav-item">
                 <i class="fas fa-shopping-basket"></i> <span>Pedidos</span>
             </a>
+            <a href="javascript:void(0)" onclick="cargarSeccion('mensajes')" id="link-mensajes" class="nav-item">
+                <i class="fas fa-envelope"></i> <span>Mensajería</span>
+            </a>
             <a href="javascript:void(0)" onclick="cargarSeccion('usuarios')" id="link-usuarios" class="nav-item">
                 <i class="fas fa-users"></i> <span>Clientes</span>
             </a>
@@ -195,6 +198,8 @@
     <script src="js/admin-modulos/admin-pedidos.js"></script>
     <script src="js/admin-modulos/admin-usuarios.js"></script>
     <script src="js/admin-modulos/admin-pagos.js"></script>
+    <script src="js/tienda/mensajes.js"></script>
+    <script src="js/admin-modulos/admin-mensajes.js"></script>
     
     <script src="js/admin-modulos/admin-core.js"></script>
 </body>
