--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,7 @@
 <body class="admin-body">
 
     <div class="mobile-header">
-        <div class="logo">M. <span>Raíz</span></div>
+        <div class="logo"> <img src="assets/images/logo.png"> <span> Mercado Raíz</span> </div>
         <i class="fas fa-bars" onclick="toggleSidebar()" style="font-size: 1.5rem; cursor: pointer;"></i>
     </div>
 
