commit: correcion boton

--- a/admin.html
+++ b/admin.html
@@ -16,7 +16,7 @@
         <i class="fas fa-bars" onclick="toggleSidebar()" style="font-size: 1.5rem; cursor: pointer;"></i>
     </div>
 
-    <aside class="sidebar">
+    <aside class="sidebar" id="sidebar">
         <div class="sidebar-header">
             <h2 class="logo">Mercado<span>Raíz</span></h2>
         </div>
