commit: carrusel corregido

--- a/carrito.html
+++ b/carrito.html
@@ -17,6 +17,8 @@
                 <a href="index.html">Inicio</a>
                 <a href="productos.html">Productos</a>
                 <a href="proveedor.html">Proveedores</a>
+                <a href="contacto.html">Contacto</a>
+                <a href="calidad.html">Calidad</a>
                 <a href="carrito.html" class="active">Carrito</a>
                 <div class="auth-buttons" id="authContainer">
                     </div>
