--- a/perfil-proveedor.html
+++ b/perfil-proveedor.html
@@ -34,7 +34,7 @@
         </div>
     </header>
 
-    <main class="container" style="padding-top: 40px; padding-bottom: 60px;">
+    <main class="container" >
         <div style="margin-bottom: 30px;">
             <a href="proveedor.html" style="text-decoration: none; color: #8da281; font-weight: 700;">
                 <i class="fas fa-arrow-left"></i> Volver a Proveedores
@@ -129,18 +129,18 @@
                         const img = prod.urlFotoProducto || prod.imagenUrl || 'img/default.jpg';
                         
                         grid.innerHTML += `
-                            <div class="product-card" style="background:white; border-radius:12px; border:1px solid #eee; overflow:hidden; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
-                                <img src="${img}" style="width:100%; height:180px; object-fit:cover;">
-                                <div style="padding:15px; text-align:center;">
-                                    <h4 style="font-family:'Playfair Display'; margin: 10px 0;">${prod.nombre}</h4>
-                                    <p style="color:#c6714f; font-weight:bold; margin-bottom: 15px;">$${parseFloat(prod.precio || 0).toFixed(2)} / ${prod.unidad || 'u'}</p>
-                                    
-                                    <button onclick="agregarAlCarritoLocal('${child.key}', '${prod.nombre}', ${prod.precio}, '${img}', '${providerId}')" 
-                                            class="btn-add-cart" 
-                                            style="background:#8da281; color:white; border:none; padding:10px 20px; border-radius:25px; cursor:pointer; width: 100%; font-weight: 700; transition: 0.3s;">
-                                        <i class="fas fa-cart-plus"></i> Añadir
-                                    </button>
-                                </div>
+                            <div class="product-mini-card">
+                            <div class="product-mini-image">
+                            <img src="${img}" alt="${prod.nombre}">
+                            </div>
+                            <div class="product-mini-info">
+                                <h4>${prod.nombre}</h4>
+                                <p class="price">$${parseFloat(prod.precio || 0).toFixed(2)} / ${prod.unidad || 'u'}</p>
+                                <button onclick="agregarAlCarritoLocal('${child.key}', '${prod.nombre}', ${prod.precio}, '${img}', '${providerId}')" 
+                                    class="btn-add-mini">
+                                <i class="fas fa-cart-plus"></i> Añadir al Carrito
+                                </button>
+                             </div>
                             </div>`;
                     }
                 });
