commit: CORRECION ALERTS

--- a/categoria.html
+++ b/categoria.html
@@ -145,5 +145,7 @@
 
     <script src="js/data.js"></script>
     <script src="js/main.js"></script>
+
+    <div id="notification-container" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
 </body>
 </html>
