--- a/productos.html
+++ b/productos.html
@@ -189,5 +189,6 @@ const card = `
             }
         }
     </script>
+    <div id="notification-container" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
 </body>
 </html>
