--- a/proveedor.html
+++ b/proveedor.html
@@ -130,5 +130,7 @@
         });
     });
     </script>
+
+    <div id="notification-container" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
 </body>
 </html>
