--- a/calidad.html
+++ b/calidad.html
@@ -137,5 +137,6 @@
     </script>
 
     <script src="js/main.js"></script>
+    <div id="notification-container" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
 </body>
 </html>
