--- a/carrito.html
+++ b/carrito.html
@@ -86,5 +86,7 @@
             if(window.dibujarCarrito) window.dibujarCarrito();
         };
     </script>
+
+    <div id="notification-container" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
 </body>
 </html>
