--- a/contacto.html
+++ b/contacto.html
@@ -162,5 +162,7 @@
             });
     });
 </script>
+
+<div id="notification-container" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
 </body>
 </html>
