--- a/login.html
+++ b/login.html
@@ -142,5 +142,7 @@
             if(document.getElementById('reg_nombre')) document.getElementById('reg_nombre').required = !isLogin;
         }
     </script>
+
+    <div id="notification-container" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000;"></div>
 </body>
 </html>
