commit: modificacion pdf seccion pagos

--- a/admin.html
+++ b/admin.html
@@ -207,5 +207,7 @@
     <script src="js/admin-modulos/admin-mensajes.js"></script>
     
     <script src="js/admin-modulos/admin-core.js"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 </html>
