--- a/perfil-proveedor.html
+++ b/perfil-proveedor.html
@@ -27,6 +27,9 @@
                 <a href="index.html">Inicio</a>
                 <a href="productos.html">Productos</a>
                 <a href="proveedor.html" class="active">Proveedores</a>
+                <a href="contacto.html">Contacto</a>
+                <a href="calidad.html">Calidad</a>
+                <a href="carrito.html">Carrito</a>
                 <div class="auth-buttons" id="authContainer">
                     <a href="login.html" id="loginLink" class="btn-login-header">Iniciar Sesión</a>
                 </div>
