commit: modificacion carrito responsive 2

--- a/carrito.html
+++ b/carrito.html
@@ -34,7 +34,7 @@
 
         <div class="category-card" style="padding: 30px; background: white; border-radius: 20px; box-shadow: 0 10px 30px rgba(0,0,0,0.05);">
             <div id="contenedor-tabla-carrito">
-                <table style="width: 100%; border-collapse: collapse;">
+                <table class="tabla-carrito" style="width: 100%; border-collapse: collapse;">
                     <thead>
                         <tr style="text-align: left; color: #8da281; border-bottom: 2px solid #eee;">
                             <th style="padding: 15px;">Producto</th>
