commit: modificacion carrito responsive y panel de pagos

--- a/admin.html
+++ b/admin.html
@@ -136,13 +136,13 @@
                         <input type="text" id="prov-dni">
                     </div>
                     <div>
-                        <label>Banco</label>
-                        <input type="text" id="prov-banco" placeholder="Ej: Banco Pichincha">
-                    </div>
-                    <div>
-                        <label>Nº de Cuenta</label>
-                        <input type="text" id="prov-num-cta">
-                    </div>
+    <label>Banco</label>
+    <input type="text" id="prov-banco" placeholder="Ej: Banco Pichincha">
+</div>
+<div>
+    <label>Nº de Cuenta</label>
+    <input type="text" id="prov-numeroCuenta"> 
+</div>
                     <div class="full-width">
                         <label>Historia / Bio</label>
                         <textarea id="prov-historia" rows="2"></textarea>
