commit: actualizacion categorias

--- a/productos.html
+++ b/productos.html
@@ -64,7 +64,7 @@
             <div class="text-center" style="margin-bottom: 40px;">
                 <div class="filter-chips" style="display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
                     <a href="productos.html?cat=todos" class="category-card" id="btn-todos" style="padding: 10px 25px; min-width: auto; text-decoration: none;">Todos</a>
-                    <a href="productos.html?cat=Papas" class="category-card" style="padding: 10px 25px; min-width: auto; text-decoration: none;">Papas y Tubérculos</a>
+                    <a href="productos.html?cat=Verduras" class="category-card" style="padding: 10px 25px; min-width: auto; text-decoration: none;">Verduras</a>
                     <a href="productos.html?cat=Hortalizas" class="category-card" style="padding: 10px 25px; min-width: auto; text-decoration: none;">Hortalizas</a>
                     <a href="productos.html?cat=Frutas" class="category-card" style="padding: 10px 25px; min-width: auto; text-decoration: none;">Frutas</a>
                     <a href="productos.html?cat=Lácteos" class="category-card" style="padding: 10px 25px; min-width: auto; text-decoration: none;">Lácteos</a>
